--- a/index.html
+++ b/index.html
@@ -1,65 +1,36 @@
+<!-- Save this as index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CráneoClave | Stroke Triage</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f4f6f8;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom right, #e9f5ff, #fefefe);
     }
-    .hero-section {
-      background: linear-gradient(to right, #004085, #007bff);
-      color: white;
-      padding: 4rem 1rem;
-      text-align: center;
-      border-radius: 0 0 1rem 1rem;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    .hero-section h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
-    }
-    .hero-section p {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-    }
-    .main-content {
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    .nav-link.active {
-      font-weight: bold;
-      border-bottom: 2px solid white;
-    }
-    .language-select {
-      max-width: 250px;
+    .main-header {
+      padding-top: 2rem;
     }
   </style>
 </head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+<body onload="initializeTimer()">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="#">🧠 CráneoClave</a>
+      <a class="navbar-brand" href="#">🧠 CráneoClave</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="education.html">Education</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="timer.html">Timer</a>
-          </li>
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="education.html">Education</a></li>
+          <li class="nav-item"><a class="nav-link" href="timer.html">Timer</a></li>
         </ul>
         <form class="d-flex">
-          <select id="languageSelect" class="form-select language-select" onchange="setLanguage()">
+          <select id="languageSelect" class="form-select" onchange="setLanguage()">
             <option value="es">🇪🇸 Español</option>
             <option value="pt">🇧🇷 Português</option>
             <option value="qu">🇧🇴 Quechua</option>
@@ -90,14 +61,45 @@
     </div>
   </nav>
 
-  <div class="hero-section">
+  <div class="container main-header text-center">
     <h1>Welcome to CráneoClave</h1>
-    <p class="lead">Multilingual stroke triage. Faster care. Better outcomes.</p>
-  </div>
+    <p class="lead">Use this guided triage tool to recognize stroke signs and take quick action.</p>
+    <p class="text-muted">Language selected: <span id="currentLanguage">English</span></p>
 
-  <div class="main-content">
-    <p class="text-muted">Selected language: <span id="currentLanguage">English</span></p>
-    <p>Use the navigation bar to begin triage, review stroke education, or check response timing.</p>
+    <div class="my-4">
+      <p class="fw-bold" id="startTimeDisplay">⏱️ Timer began when: </p>
+      <label for="symptomStartTime" class="form-label">🕒 When did symptoms start?</label>
+      <input type="datetime-local" class="form-control" id="symptomStartTime" />
+    </div>
+
+    <div class="my-4">
+      <button class="btn btn-outline-info" onclick="logEvent('Symptom start noted')">Log Symptom Start</button>
+      <button class="btn btn-outline-success" onclick="logEvent('Checklist completed')">Log Checklist</button>
+    </div>
+
+    <div class="accordion" id="nextStepsAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+            🚨 Next Steps (Qué hacer ahora)
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#nextStepsAccordion">
+          <div class="accordion-body text-start">
+            <ul>
+              <li>🚑 Arrange safe transport — use mototaxi or community vehicle</li>
+              <li>📞 Notify nearest health post with symptoms + timing</li>
+              <li>🆔 Prepare ID, medication list, history</li>
+              <li>👪 Assign someone to monitor the patient during transport</li>
+              <li>💬 Use language tools — icons or regional languages</li>
+              <li>📷 Optional: take photos/videos of symptoms</li>
+              <li>🔄 Watch for worsening symptoms or delays</li>
+              <li>🧠 Remember: The brain is swelling. Time is critical.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script>
@@ -106,8 +108,22 @@
       const selectedText = langSelect.options[langSelect.selectedIndex].text;
       document.getElementById("currentLanguage").textContent = selectedText;
     }
+
+    function initializeTimer() {
+      const now = new Date();
+      const formatted = now.toLocaleTimeString();
+      sessionStorage.setItem("timerStart", formatted);
+      document.getElementById("startTimeDisplay").textContent = `⏱️ Timer began when: ${formatted}`;
+    }
+
+    function logEvent(msg) {
+      const logs = JSON.parse(localStorage.getItem("cranioLogs")) || [];
+      const time = new Date().toLocaleString();
+      logs.push(`${time} – ${msg}`);
+      localStorage.setItem("cranioLogs", JSON.stringify(logs));
+      alert(`Logged: ${msg}`);
+    }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
