--- a/timer.html
+++ b/timer.html
@@ -7,23 +7,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #f5fbff, #ffffff);
+      background: linear-gradient(to bottom right, #fffaf0, #e6f7ff);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 1rem;
     }
-    .timer-header {
-      text-align: center;
+    .card {
       margin-top: 2rem;
     }
-    .timer-display {
-      font-size: 3rem;
-      margin: 2rem 0;
+    .timer-box {
+      font-size: 2rem;
       font-weight: bold;
-      text-align: center;
-    }
-    .btn-group {
-      justify-content: center;
-      display: flex;
-      gap: 1rem;
     }
   </style>
 </head>
@@ -35,74 +28,61 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="education.html">Education</a></li>
           <li class="nav-item"><a class="nav-link active" href="timer.html">Timer</a></li>
         </ul>
-        <form class="d-flex">
-          <select id="languageSelect" class="form-select">
-            <option value="es">🇪🇸 Español</option>
-            <option value="pt">🇧🇷 Português</option>
-            <option value="qu">🇧🇴 Quechua</option>
-            <option value="gn">🇵🇾 Guaraní</option>
-            <option value="en" selected>🇺🇸 English</option>
-            <!-- Add additional languages -->
-          </select>
-        </form>
       </div>
     </div>
   </nav>
 
-  <div class="container timer-header">
-    <h1>🕒 Time Since Symptom Onset</h1>
-    <p class="lead">Track every second — rapid care saves brain tissue.</p>
+  <div class="container text-center">
+    <h1 class="mt-4">⏱️ Stroke Onset Timer</h1>
+    <p class="lead">Use this timer to track how long symptoms have been present.</p>
+
+    <div class="card">
+      <div class="card-body">
+        <p><strong>Timer began when:</strong> <span id="start-time">--:--:--</span></p>
+        <div class="timer-box" id="elapsed-time">00:00:00</div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-body">
+        <label for="symptomTime" class="form-label mt-3">🕒 When did symptoms start?</label>
+        <input type="datetime-local" id="symptomTime" class="form-control"/>
+        <button class="btn btn-outline-primary mt-2" onclick="logSymptomTime()">Log Time</button>
+        <div id="logOutput" class="mt-3 text-muted"></div>
+      </div>
+    </div>
   </div>
-
-  <div class="timer-display" id="timer">00:00:00</div>
-
-  <div class="btn-group mb-4">
-    <button class="btn btn-success" onclick="startTimer()">Start</button>
-    <button class="btn btn-warning" onclick="stopTimer()">Stop</button>
-    <button class="btn btn-danger" onclick="resetTimer()">Reset</button>
-  </div>
-
-  <footer class="text-center py-3 text-muted">
-    © 2025 CráneoClave | Timer for acute stroke care.
-  </footer>
 
   <script>
-    let startTime, timerInterval;
-    const display = document.getElementById("timer");
+    const startTime = new Date();
+    document.getElementById('start-time').innerText = startTime.toLocaleTimeString();
 
-    function updateDisplay() {
-      const elapsed = Date.now() - startTime;
-      const hrs = Math.floor(elapsed / 3600000);
-      const mins = Math.floor((elapsed % 3600000) / 60000);
-      const secs = Math.floor((elapsed % 60000) / 1000);
-      display.textContent = `${hrs.toString().padStart(2, '0')}:${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
+    function updateElapsedTime() {
+      const now = new Date();
+      const diff = new Date(now - startTime);
+      const h = String(diff.getUTCHours()).padStart(2, '0');
+      const m = String(diff.getUTCMinutes()).padStart(2, '0');
+      const s = String(diff.getUTCSeconds()).padStart(2, '0');
+      document.getElementById('elapsed-time').innerText = `${h}:${m}:${s}`;
     }
 
-    function startTimer() {
-      if (!timerInterval) {
-        startTime = Date.now() - (timerInterval ? Date.now() - startTime : 0);
-        timerInterval = setInterval(updateDisplay, 1000);
+    setInterval(updateElapsedTime, 1000);
+
+    function logSymptomTime() {
+      const val = document.getElementById('symptomTime').value;
+      if (val) {
+        document.getElementById('logOutput').innerText = `📝 Logged: ${new Date(val).toLocaleString()}`;
+        // Save to localStorage/sessionStorage if needed
+      } else {
+        document.getElementById('logOutput').innerText = "⚠️ Please select a time.";
       }
     }
-
-    function stopTimer() {
-      clearInterval(timerInterval);
-      timerInterval = null;
-    }
-
-    function resetTimer() {
-      stopTimer();
-      display.textContent = "00:00:00";
-    }
-
-    window.onload = startTimer;
   </script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
