--- a/education.html
+++ b/education.html
@@ -4,24 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stroke Education | CráneoClave</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #f0f9ff, #ffffff);
+      background: linear-gradient(to bottom right, #f8f9fa, #e6f0ff);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .card {
+      margin-bottom: 1rem;
     }
     .edu-header {
-      padding: 2rem 1rem;
-      text-align: center;
+      margin-top: 2rem;
     }
-    .edu-header h1 {
-      font-size: 2.5rem;
-    }
-    .flag-icon {
-      margin-right: 5px;
-    }
-    .accordion-button::after {
-      filter: brightness(0.5);
+    .accordion-button:not(.collapsed) {
+      background-color: #dbeafe;
+      color: #000;
     }
   </style>
 </head>
@@ -33,100 +30,89 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="education.html">Education</a></li>
           <li class="nav-item"><a class="nav-link" href="timer.html">Timer</a></li>
         </ul>
-        <form class="d-flex">
-          <select id="languageSelect" class="form-select">
-            <option value="es">🇪🇸 Español</option>
-            <option value="pt">🇧🇷 Português</option>
-            <option value="qu">🇧🇴 Quechua</option>
-            <option value="gn">🇵🇾 Guaraní</option>
-            <option value="en" selected>🇺🇸 English</option>
-            <!-- Add other languages -->
-          </select>
-        </form>
       </div>
     </div>
   </nav>
 
-  <div class="edu-header">
-    <h1>Know the Signs of Stroke</h1>
-    <p class="lead">Learn to recognize a stroke early — every second counts.</p>
-  </div>
+  <div class="container edu-header">
+    <h1 class="text-center mb-4">🧠 Recognize the Signs of Stroke</h1>
+    <div class="accordion" id="strokeEducationAccordion">
 
-  <div class="container mb-4">
-    <div class="row g-3">
-      <div class="col-md-6">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">🧠 Use the BE FAST Method</h5>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item" data-bs-toggle="tooltip" title="Sudden loss of balance or coordination.">B – Balance</li>
-              <li class="list-group-item" data-bs-toggle="tooltip" title="Vision changes in one or both eyes.">E – Eyes</li>
-              <li class="list-group-item" data-bs-toggle="tooltip" title="Face drooping on one side when smiling.">F – Face</li>
-              <li class="list-group-item" data-bs-toggle="tooltip" title="Arm weakness or numbness.">A – Arms</li>
-              <li class="list-group-item" data-bs-toggle="tooltip" title="Slurred or strange speech.">S – Speech</li>
-              <li class="list-group-item" data-bs-toggle="tooltip" title="Call emergency services right away.">T – Time</li>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="fastHeader">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#fast" aria-expanded="true">
+            🔤 FAST Acronym
+          </button>
+        </h2>
+        <div id="fast" class="accordion-collapse collapse show" data-bs-parent="#strokeEducationAccordion">
+          <div class="accordion-body">
+            <strong>F</strong>ace drooping<br>
+            <strong>A</strong>rm weakness<br>
+            <strong>S</strong>peech difficulty<br>
+            <strong>T</strong>ime to call emergency services
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="moreSymptomsHeader">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#moreSymptoms">
+            🧩 Additional Stroke Symptoms
+          </button>
+        </h2>
+        <div id="moreSymptoms" class="accordion-collapse collapse" data-bs-parent="#strokeEducationAccordion">
+          <div class="accordion-body">
+            <ul>
+              <li>Sudden confusion or trouble understanding</li>
+              <li>Sudden numbness or weakness in face, arm, or leg — especially on one side</li>
+              <li>Trouble seeing in one or both eyes</li>
+              <li>Severe headache with no known cause</li>
+              <li>Loss of balance or coordination</li>
             </ul>
           </div>
         </div>
       </div>
-      
-      <div class="col-md-6">
-        <div class="accordion" id="strokeFAQ">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="q1">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#a1">
-                Why is early stroke detection important?
-              </button>
-            </h2>
-            <div id="a1" class="accordion-collapse collapse show" data-bs-parent="#strokeFAQ">
-              <div class="accordion-body">
-                Brain cells begin to die within minutes of a stroke. Early recognition means quicker treatment and better recovery.
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="q2">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a2">
-                What if I don’t speak the local language?
-              </button>
-            </h2>
-            <div id="a2" class="accordion-collapse collapse" data-bs-parent="#strokeFAQ">
-              <div class="accordion-body">
-                CráneoClave supports multiple languages and picture-based communication to assist in rural or multilingual settings.
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="q3">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#a3">
-                What can I do while waiting for help?
-              </button>
-            </h2>
-            <div id="a3" class="accordion-collapse collapse" data-bs-parent="#strokeFAQ">
-              <div class="accordion-body">
-                Keep the patient calm, flat, and monitored. Do not give food or drink. Prepare ID, medications, and referral info.
-              </div>
-            </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="languageSupportHeader">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#languageSupport">
+            🌎 Local Language Tools
+          </button>
+        </h2>
+        <div id="languageSupport" class="accordion-collapse collapse" data-bs-parent="#strokeEducationAccordion">
+          <div class="accordion-body">
+            CráneoClave supports Español, Português, Quechua, Guaraní, English, and many more languages. Picture icons help communicate even when literacy is limited.
           </div>
         </div>
       </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="stepsHeader">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#steps">
+            📝 What to Do: Step-by-Step
+          </button>
+        </h2>
+        <div id="steps" class="accordion-collapse collapse" data-bs-parent="#strokeEducationAccordion">
+          <div class="accordion-body">
+            <ol>
+              <li>Start the timer and note when symptoms began.</li>
+              <li>Use the triage checklist and confirm stroke signs.</li>
+              <li>Do not let the patient walk — arrange safe transport.</li>
+              <li>Gather ID, medical history, and symptom logs for the hospital.</li>
+              <li>Notify the nearest clinic or health post. Use simple language or pictures if needed.</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
-  <footer class="text-center py-3 text-muted">
-    © 2025 CráneoClave | Stroke education saves lives.
-  </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    const tooltips = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-    tooltips.forEach(t => new bootstrap.Tooltip(t));
-  </script>
 </body>
 </html>
-
