--- a/education.html
+++ b/education.html
@@ -4,114 +4,126 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stroke Education | CráneoClave</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      background: linear-gradient(to bottom right, #f8f9fa, #e6f0ff);
+      background: linear-gradient(to bottom right, #f5f7fa, #e0ecff);
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
     .card {
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
+      border-radius: 1rem;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
     }
     .edu-header {
       margin-top: 2rem;
     }
-    .accordion-button:not(.collapsed) {
-      background-color: #dbeafe;
-      color: #000;
+    .dropdown-language {
+      margin-left: auto;
     }
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">🧠 CráneoClave</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="education.html">Education</a></li>
           <li class="nav-item"><a class="nav-link" href="timer.html">Timer</a></li>
         </ul>
+        <select class="form-select w-auto dropdown-language" onchange="speakText()">
+          <option selected>🌎 Español</option>
+          <option>Português</option>
+          <option>English</option>
+          <option>Quechua</option>
+          <option>Guaraní</option>
+        </select>
       </div>
     </div>
   </nav>
 
   <div class="container edu-header">
-    <h1 class="text-center mb-4">🧠 Recognize the Signs of Stroke</h1>
-    <div class="accordion" id="strokeEducationAccordion">
+    <h1 class="text-center mt-4">🧠 Know the Signs of Stroke</h1>
+    <p class="text-center mb-4">Time is brain — act fast, act informed</p>
 
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="fastHeader">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#fast" aria-expanded="true">
-            🔤 FAST Acronym
-          </button>
-        </h2>
-        <div id="fast" class="accordion-collapse collapse show" data-bs-parent="#strokeEducationAccordion">
-          <div class="accordion-body">
-            <strong>F</strong>ace drooping<br>
-            <strong>A</strong>rm weakness<br>
-            <strong>S</strong>peech difficulty<br>
-            <strong>T</strong>ime to call emergency services
-          </div>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">🔤 FAST Acronym</h5>
+        <p class="card-text">
+          <strong>F</strong>ace drooping<br>
+          <strong>A</strong>rm weakness<br>
+          <strong>S</strong>peech difficulty<br>
+          <strong>T</strong>ime to call emergency services
+        </p>
       </div>
+    </div>
 
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="moreSymptomsHeader">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#moreSymptoms">
-            🧩 Additional Stroke Symptoms
-          </button>
-        </h2>
-        <div id="moreSymptoms" class="accordion-collapse collapse" data-bs-parent="#strokeEducationAccordion">
-          <div class="accordion-body">
-            <ul>
-              <li>Sudden confusion or trouble understanding</li>
-              <li>Sudden numbness or weakness in face, arm, or leg — especially on one side</li>
-              <li>Trouble seeing in one or both eyes</li>
-              <li>Severe headache with no known cause</li>
-              <li>Loss of balance or coordination</li>
-            </ul>
-          </div>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">🧩 Additional Symptoms</h5>
+        <ul>
+          <li>Sudden numbness or weakness (especially on one side)</li>
+          <li>Confusion, trouble speaking or understanding</li>
+          <li>Vision problems in one or both eyes</li>
+          <li>Dizziness, loss of balance or coordination</li>
+          <li>Severe headache with no known cause</li>
+        </ul>
       </div>
+    </div>
 
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="languageSupportHeader">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#languageSupport">
-            🌎 Local Language Tools
-          </button>
-        </h2>
-        <div id="languageSupport" class="accordion-collapse collapse" data-bs-parent="#strokeEducationAccordion">
-          <div class="accordion-body">
-            CráneoClave supports Español, Português, Quechua, Guaraní, English, and many more languages. Picture icons help communicate even when literacy is limited.
-          </div>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">🌐 Local Language Support</h5>
+        <p>
+          CráneoClave offers multilingual support: Español, Português, Quechua, Guaraní, and more.
+          Picture icons and audio help make understanding easier for everyone.
+        </p>
       </div>
+    </div>
 
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="stepsHeader">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#steps">
-            📝 What to Do: Step-by-Step
-          </button>
-        </h2>
-        <div id="steps" class="accordion-collapse collapse" data-bs-parent="#strokeEducationAccordion">
-          <div class="accordion-body">
-            <ol>
-              <li>Start the timer and note when symptoms began.</li>
-              <li>Use the triage checklist and confirm stroke signs.</li>
-              <li>Do not let the patient walk — arrange safe transport.</li>
-              <li>Gather ID, medical history, and symptom logs for the hospital.</li>
-              <li>Notify the nearest clinic or health post. Use simple language or pictures if needed.</li>
-            </ol>
-          </div>
-        </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">🚑 What to Do</h5>
+        <ol>
+          <li>Start the timer. Note the **exact time** symptoms began.</li>
+          <li>Use the checklist tool on the home screen.</li>
+          <li>Do NOT drive. Use safe transport or call emergency services.</li>
+          <li>Bring ID, medication list, and a symptom log to the hospital.</li>
+        </ol>
       </div>
-
     </div>
   </div>
+
+  <script>
+    function speakText() {
+      const selectedLang = document.querySelector('.dropdown-language').value;
+      const text = "Learn to recognize stroke signs early. Time is brain.";
+      const utterance = new SpeechSynthesisUtterance(text);
+
+      switch (selectedLang) {
+        case "Español":
+          utterance.lang = 'es-ES';
+          break;
+        case "Português":
+          utterance.lang = 'pt-BR';
+          break;
+        case "English":
+          utterance.lang = 'en-US';
+          break;
+        case "Quechua":
+        case "Guaraní":
+          utterance.lang = 'es-ES'; // fallback for now
+          break;
+      }
+
+      speechSynthesis.speak(utterance);
+    }
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
