--- a/timer.html
+++ b/timer.html
@@ -2,26 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stroke Timer | CráneoClave</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      background: linear-gradient(to bottom right, #fffaf0, #e6f7ff);
+      background: linear-gradient(to bottom right, #f5f5f5, #e6f0ff);
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      padding: 1rem;
-    }
-    .card {
-      margin-top: 2rem;
     }
     .timer-box {
-      font-size: 2rem;
-      font-weight: bold;
+      margin-top: 3rem;
+      padding: 2rem;
+      border-radius: 1.5rem;
+      background-color: white;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+    #log-area {
+      white-space: pre-wrap;
+      font-size: 0.95rem;
+      background: #f0f8ff;
+      padding: 1rem;
+      border-radius: 1rem;
     }
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">🧠 CráneoClave</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -37,52 +44,47 @@
     </div>
   </nav>
 
-  <div class="container text-center">
-    <h1 class="mt-4">⏱️ Stroke Onset Timer</h1>
-    <p class="lead">Use this timer to track how long symptoms have been present.</p>
+  <div class="container timer-box">
+    <h2>🕒 Stroke Symptom Timer</h2>
+    <p id="startTimeText">Timer began when: </p>
+    <h1 id="live-timer">00:00:00</h1>
 
-    <div class="card">
-      <div class="card-body">
-        <p><strong>Timer began when:</strong> <span id="start-time">--:--:--</span></p>
-        <div class="timer-box" id="elapsed-time">00:00:00</div>
-      </div>
+    <div class="mt-4">
+      <label for="symptomStart" class="form-label">When did symptoms start?</label>
+      <input type="time" id="symptomStart" class="form-control"/>
+      <button class="btn btn-outline-primary mt-3" onclick="logEvent()">Log Event</button>
     </div>
 
-    <div class="card">
-      <div class="card-body">
-        <label for="symptomTime" class="form-label mt-3">🕒 When did symptoms start?</label>
-        <input type="datetime-local" id="symptomTime" class="form-control"/>
-        <button class="btn btn-outline-primary mt-2" onclick="logSymptomTime()">Log Time</button>
-        <div id="logOutput" class="mt-3 text-muted"></div>
-      </div>
+    <div class="mt-4">
+      <h5>⏳ Event Log:</h5>
+      <div id="log-area">No events logged yet.</div>
     </div>
   </div>
 
   <script>
     const startTime = new Date();
-    document.getElementById('start-time').innerText = startTime.toLocaleTimeString();
+    document.getElementById("startTimeText").textContent += startTime.toLocaleTimeString();
 
-    function updateElapsedTime() {
+    function updateTimer() {
       const now = new Date();
       const diff = new Date(now - startTime);
       const h = String(diff.getUTCHours()).padStart(2, '0');
       const m = String(diff.getUTCMinutes()).padStart(2, '0');
       const s = String(diff.getUTCSeconds()).padStart(2, '0');
-      document.getElementById('elapsed-time').innerText = `${h}:${m}:${s}`;
+      document.getElementById("live-timer").textContent = `${h}:${m}:${s}`;
     }
+    setInterval(updateTimer, 1000);
 
-    setInterval(updateElapsedTime, 1000);
+    function logEvent() {
+      const logArea = document.getElementById("log-area");
+      const timeNow = new Date().toLocaleTimeString();
+      const startInput = document.getElementById("symptomStart").value;
+      const entry = `Logged at ${timeNow}${startInput ? ` | Symptom started at: ${startInput}` : ''}`;
 
-    function logSymptomTime() {
-      const val = document.getElementById('symptomTime').value;
-      if (val) {
-        document.getElementById('logOutput').innerText = `📝 Logged: ${new Date(val).toLocaleString()}`;
-        // Save to localStorage/sessionStorage if needed
-      } else {
-        document.getElementById('logOutput').innerText = "⚠️ Please select a time.";
-      }
+      logArea.textContent = (logArea.textContent === 'No events logged yet.') ? entry : logArea.textContent + "\n" + entry;
     }
   </script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
