<!DOCTYPE html> <html lang="en"> <head>   <meta charset="UTF-8" />   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>   <title>CráneoClave | Stroke Triage</title>   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>   <style>     body {       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;       background: linear-gradient(to bottom right, #e9f5ff, #fefefe);     }     .main-header {       padding-top: 2rem;     }   </style> </head> <body onload="initializeTimer()">   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">     <div class="container-fluid">       <a class="navbar-brand" href="#">🧠 CráneoClave</a>       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">         <span class="navbar-toggler-icon"></span>       </button>       <div class="collapse navbar-collapse" id="navbarNav">         <ul class="navbar-nav me-auto">           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>           <li class="nav-item"><a class="nav-link" href="education.html">Education</a></li>           <li class="nav-item"><a class="nav-link" href="timer.html">Timer</a></li>         </ul>         <form class="d-flex">           <select id="languageSelect" class="form-select" onchange="setLanguage()">             <option value="es">🇪🇸 Español</option>             <option value="pt">🇧🇷 Português</option>             <option value="qu">🇧🇴 Quechua</option>             <option value="gn">🇵🇾 Guaraní</option>             <option value="en">🇺🇸 English</option>             <option value="fr">🇫🇷 Français</option>             <option value="de">🇩🇪 Deutsch</option>             <option value="zh">🇨🇳 中文</option>             <option value="ar">🇸🇦 العربية</option>             <option value="ru">🇷🇺 Русский</option>             <option value="hi">🇮🇳 हिंदी</option>             <option value="ja">🇯🇵 日本語</option>             <opt

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Save this as index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -62,8 +61,8 @@
   </nav>
 
   <div class="container main-header text-center">
-    <h1>Welcome to CráneoClave</h1>
-    <p class="lead">Use this guided triage tool to recognize stroke signs and take quick action.</p>
+    <h1 id="welcomeHeader">Welcome to CráneoClave</h1>
+    <p class="lead" id="welcomeSubheader">Use this guided triage tool to recognize stroke signs and take quick action.</p>
     <p class="text-muted">Language selected: <span id="currentLanguage">English</span></p>
 
     <div class="my-4">
@@ -73,8 +72,7 @@
     </div>
 
     <div class="my-4">
-      <button class="btn btn-outline-info" onclick="logEvent('Symptom start noted')">Log Symptom Start</button>
-      <button class="btn btn-outline-success" onclick="logEvent('Checklist completed')">Log Checklist</button>
+      <a href="checklist.html" class="btn btn-primary">➡️ Start Symptom Checklist</a>
     </div>
 
     <div class="accordion" id="nextStepsAccordion">
@@ -103,10 +101,26 @@
   </div>
 
   <script>
+    const translations = {
+      es: { welcome: "Bienvenido a CráneoClave", subheader: "Usa esta herramienta para reconocer signos de derrame cerebral y actuar rápido." },
+      pt: { welcome: "Bem-vindo ao CráneoClave", subheader: "Use esta ferramenta para reconhecer sinais de AVC e agir rapidamente." },
+      qu: { welcome: "CráneoClave-man hamuqkuyki", subheader: "Kay ruwanawan stroke ñawinchaykita ruwachiy." },
+      gn: { welcome: "Eguahẽ CráneoClave-pe", subheader: "Emplea ko tembiapo rehegua umi tasy ñemohendápe." },
+      en: { welcome: "Welcome to CráneoClave", subheader: "Use this guided triage tool to recognize stroke signs and take quick action." },
+      fr: { welcome: "Bienvenue à CráneoClave", subheader: "Utilisez cet outil pour détecter les signes d’AVC rapidement." },
+      // add other translations as needed
+    };
+
     function setLanguage() {
       const langSelect = document.getElementById("languageSelect");
+      const selectedLang = langSelect.value;
       const selectedText = langSelect.options[langSelect.selectedIndex].text;
       document.getElementById("currentLanguage").textContent = selectedText;
+
+      if (translations[selectedLang]) {
+        document.getElementById("welcomeHeader").textContent = translations[selectedLang].welcome;
+        document.getElementById("welcomeSubheader").textContent = translations[selectedLang].subheader;
+      }
     }
 
     function initializeTimer() {
