<!DOCTYPE html> <html lang="en"> <head>   <meta charset="UTF-8" />   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>   <title>CráneoClave | Stroke Triage</title>   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>   <style>     body {       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;       margin: 0;       padding: 0;       background: linear-gradient(to bottom right, #e9f5ff, #fefefe);     }     .hero-section {       background: linear-gradient(to right, rgba(2, 168, 176, 0.9), rgba(2, 106, 115, 0.9)), url('https://upload.wikimedia.org/wikipedia/commons/e/e4/MRI_head_side_view.jpg') center/cover no-repeat;       color: white;       padding: 8rem 2rem;       text-align: center;     }     .hero-title {       font-size: 3rem;       font-weight: bold;     }     .hero-subtitle {       font-size: 1.2rem;       max-width: 700px;       margin: 1rem auto 2rem;     }     .scroll-btn {       margin-top: 1.5rem;       font-size: 1.1rem;     }     .main-header {       padding-top: 2rem;     }     .footer {       margin-top: 4rem;       padding: 1rem;       text-align: center;       font-size: 0.9rem;       color: #888;     }   </style> </head> <body onload="initializeTimer(); playWelcomeAudio()">   <div class="hero-section">     <h1 class="hero-title" id="welcomeHeader">Welcome to CráneoClave</h1>     <p class="hero-subtitle" id="welcomeSubheader">Use this guided triage tool to recognize stroke signs and take quick action.</p>     <a href="#main" class="btn btn-light btn-lg scroll-btn">⬇️ Scroll to Start</a>   </div>
  <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
    <div class="container-fluid">
      <a class="navbar-brand" href="#">🧠 CráneoClave</a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
        <span class="navbar-toggler-icon"></span>
      </button>
      <div class="collapse navbar-co

--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
     <div class="my-4">
       <a href="checklist.html" class="btn btn-primary btn-lg">➡️ Start Symptom Checklist</a>
     </div>
+    <div class="my-4">
+      <button class="btn btn-success btn-lg" onclick="completeChecklist()">✅ Complete Symptom Checklist</button>
+    </div>
+    <div id="referralSection" class="my-4" style="display: none;">
+      <a id="referralLink" class="btn btn-danger btn-lg">📍 Find Stroke Center</a>
+    </div>
   </div>
 
   <footer class="footer">CráneoClave &copy; 2025 – Empowering Stroke Triage Access</footer>
@@ -140,6 +146,25 @@
       const utterance = new SpeechSynthesisUtterance("Welcome to CráneoClave. Use this tool to recognize stroke signs and act quickly.");
       utterance.lang = "en-US";
       window.speechSynthesis.speak(utterance);
+    }
+
+    function completeChecklist() {
+      sessionStorage.setItem("checklistComplete", "true");
+      document.getElementById("referralSection").style.display = "block";
+    }
+
+    window.onload = function () {
+      const checklistDone = sessionStorage.getItem("checklistComplete") === "true";
+      if (checklistDone) {
+        document.getElementById("referralSection").style.display = "block";
+      }
+      const referralLink = document.getElementById('referralLink');
+      if (referralLink) {
+        referralLink.onclick = function () {
+          const timerStart = sessionStorage.getItem("timerStart") || "unknown";
+          window.location.href = `map.html?startTime=${encodeURIComponent(timerStart)}`;
+        };
+      }
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
