--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CráneoClave | Stroke Triage</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Open Sans', sans-serif;
       margin: 0;
       padding: 0;
       background: linear-gradient(to bottom right, #e9f5ff, #fefefe);
@@ -15,24 +16,29 @@
     .hero-section {
       background: linear-gradient(to right, rgba(2, 168, 176, 0.9), rgba(2, 106, 115, 0.9)), url('https://upload.wikimedia.org/wikipedia/commons/e/e4/MRI_head_side_view.jpg') center/cover no-repeat;
       color: white;
-      padding: 8rem 2rem;
+      padding: 10vh 2rem;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
     }
     .hero-title {
-      font-size: 3rem;
-      font-weight: bold;
+      font-size: 3.5rem;
+      font-weight: 700;
     }
     .hero-subtitle {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       max-width: 700px;
       margin: 1rem auto 2rem;
     }
     .scroll-btn {
       margin-top: 1.5rem;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
     }
     .main-header {
-      padding-top: 2rem;
+      padding-top: 4rem;
     }
     .footer {
       margin-top: 4rem;
@@ -40,6 +46,21 @@
       text-align: center;
       font-size: 0.9rem;
       color: #888;
+    }
+    .about-section {
+      background-color: #f9f9f9;
+      padding: 3rem 2rem;
+      text-align: center;
+    }
+    .about-section h2 {
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+    .about-section p {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 1.1rem;
+      line-height: 1.6;
     }
   </style>
 </head>
@@ -110,6 +131,13 @@
     <div id="referralSection" class="my-4" style="display: none;">
       <a id="referralLink" class="btn btn-danger btn-lg">📍 Find Stroke Center</a>
     </div>
+  </div>
+
+  <div class="about-section">
+    <h2>About CráneoClave</h2>
+    <p>
+      CráneoClave is an AI-assisted stroke triage platform designed to improve access to timely, multilingual stroke care in low-resource settings. By combining symptom checklists, real-time timers, visual screening, and location-based hospital referrals, we help patients and caregivers take immediate action when every second counts.
+    </p>
   </div>
 
   <footer class="footer">CráneoClave &copy; 2025 – Empowering Stroke Triage Access</footer>
