<!DOCTYPE html> <html lang="en"> <head>   <meta charset="UTF-8" />   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>   <title>CráneoClave | Stroke Triage</title>   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">   <style>     body {       font-family: 'Open Sans', sans-serif;       margin: 0;       padding: 0;       background: linear-gradient(to bottom right, #e9f5ff, #fefefe);     }     .hero-section {   background:     linear-gradient(to right, rgba(2, 168, 176, 0.9), rgba(2, 106, 115, 0.9)),     url('https://upload.wikimedia.org/wikipedia/commons/3/36/Human_brain_MRI_sagittal_slice.jpg'),     url('https://upload.wikimedia.org/wikipedia/commons/1/19/Neuron.svg');   background-blend-mode: overlay, lighten;   background-repeat: no-repeat, no-repeat;   background-position: center center, right bottom;   background-size: cover, 40%;   color: white;   padding: 10vh 2rem;   min-height: 100vh;   display: flex;   flex-direction: column;   justify-content: center;   align-items: center;   text-align: center; }     }     .hero-title {       font-size: 3.5rem;       font-weight: 700;     }     .hero-subtitle {       font-size: 1.4rem;       max-width: 700px;       margin: 1rem auto 2rem;     }     .scroll-btn {       margin-top: 1.5rem;       font-size: 1.2rem;     }     .main-header {       padding-top: 4rem;     }     .footer {       margin-top: 4rem;       padding: 1rem;       text-align: center;       font-size: 0.9rem;       color: #888;     }     .about-section {       background-color: #f9f9f9;       padding: 3rem 2rem;       text-align: center;     }     .about-section h2 {       font-weight: 600;       margin-bottom: 1rem;     }     .about-section p {       max-width: 800px;       margin: 0 auto;       font-size: 1.1rem;       line-height: 1.6;     }   </style> </head> <body

--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
       background: linear-gradient(to bottom right, #e9f5ff, #fefefe);
     }
     .hero-section {
-      background: linear-gradient(to right, rgba(2, 168, 176, 0.9), rgba(2, 106, 115, 0.9)), url('https://upload.wikimedia.org/wikipedia/commons/e/e4/MRI_head_side_view.jpg') center/cover no-repeat;
-      color: white;
-      padding: 10vh 2rem;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
+  background: 
+    linear-gradient(to right, rgba(2, 168, 176, 0.9), rgba(2, 106, 115, 0.9)),
+    url('https://upload.wikimedia.org/wikipedia/commons/3/36/Human_brain_MRI_sagittal_slice.jpg'),
+    url('https://upload.wikimedia.org/wikipedia/commons/1/19/Neuron.svg');
+  background-blend-mode: overlay, lighten;
+  background-repeat: no-repeat, no-repeat;
+  background-position: center center, right bottom;
+  background-size: cover, 40%;
+  color: white;
+  padding: 10vh 2rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
     }
     .hero-title {
       font-size: 3.5rem;
